--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,4 @@ networks:
     name: hallucinet
     ipam:
       config:
-        - subnet: 192.168.100.0/24
+        - subnet: ${HALLUCINATE_SUBNET:-192.168.100.0/24}
