--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,14 @@
 services:
-  dns:
-    image: coredns/coredns:1.12.0
-    container_name: hallucinet-dns
+  hallucinet:
+    image: marcorentap/hallucinet
+    build: .
+    container_name: hallucinet
     restart: always
     volumes:
-      - ./data/coredns:/data
-    networks:
-      hallucinet:
-        ipv4_address: 192.168.100.2
-    command:
-      - "-conf"
-      - "/data/Corefile"
-  backend:
-    depends_on:
-      - dns
-    image: marcorentap/hallucinet-backend
-    container_name: hallucinet-backend
-    build: ./backend
-    restart: always
-    volumes:
-      - ./data/backend:/data/backend
-      - ./data/coredns:/data/coredns
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       hallucinet:
-        ipv4_address: 192.168.100.3
+        ipv4_address: 192.168.100.2
       
 networks:
   hallucinet:
