--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   nginx:
     image: nginx:1.27.4
+    build:
+      context: .
+      dockerfile: webui.Dockerfile
     container_name: hallucinet
     networks:
       hallucinet:
@@ -19,7 +22,6 @@ services:
     networks:
       hallucinet:
         ipv4_address: 192.168.100.3
-  # frontend:
 
 networks:
   hallucinet:
