--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,10 @@ http {
       location /api/v1/ {
           proxy_pass http://192.168.100.3:80/;
       }
+      location / {
+        include mime.types;
+        root /etc/hallucinet/webui;
+      }
   }
 }
 
