--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ http {
   server {
       listen 80;
       location /api/v1/ {
-          proxy_pass http://192.168.100.3:80/;
+          proxy_pass http://hallucinet-backend/;
       }
       location / {
         include mime.types;
